--- a/3-interactive-card/src/index.html
+++ b/3-interactive-card/src/index.html
@@ -7,6 +7,7 @@
     <title>Three.js Interactive Web</title>
   </head>
   <body>
+    <div class="container"></div>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
